[project]
name = "resume-pdf"
version = "0.1.0"
description = "Generate styled PDF resume from markdown"
requires-python = ">=3.11"
dependencies = [
    "emoji>=2.0.0",
    "markdown>=3.5.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
]

[project.scripts]
resume-pdf = "resume_pdf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.8.0", "pyright>=1.1.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
